@@ -8,10 +8,10 @@ import java.util.stream.Collectors;
 
 import jakarta.enterprise.inject.Any;
 import jakarta.enterprise.inject.Instance;
-
 import no.nav.k9.kodeverk.behandling.BehandlingResultatType;
 import no.nav.k9.kodeverk.behandling.BehandlingStegType;
 import no.nav.k9.kodeverk.behandling.FagsakYtelseType;
+import no.nav.k9.kodeverk.behandling.aksjonspunkt.AksjonspunktDefinisjon;
 import no.nav.k9.kodeverk.vilkår.Utfall;
 import no.nav.k9.sak.behandling.BehandlingReferanse;
 import no.nav.k9.sak.behandlingskontroll.BehandleStegResultat;
@@ -19,6 +19,7 @@ import no.nav.k9.sak.behandlingskontroll.BehandlingStegModell;
 import no.nav.k9.sak.behandlingskontroll.BehandlingskontrollKontekst;
 import no.nav.k9.sak.behandlingskontroll.FagsakYtelseTypeRef;
 import no.nav.k9.sak.behandlingslager.behandling.Behandling;
+import no.nav.k9.sak.behandlingslager.behandling.aksjonspunkt.Aksjonspunkt;
 import no.nav.k9.sak.behandlingslager.behandling.repository.BehandlingRepository;
 import no.nav.k9.sak.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.k9.sak.behandlingslager.behandling.vilkår.Vilkår;
@@ -102,7 +103,7 @@ public abstract class ForeslåBehandlingsresultatStegFelles implements ForeslåB
     private void validerVilkår(Vilkår vilkår) {
         List<VilkårPeriode> ikkeVurdertePerioder = vilkår.getPerioder().stream()
             .filter((Predicate<? super VilkårPeriode>) at -> Utfall.IKKE_VURDERT.equals(at.getGjeldendeUtfall()))
-            .collect(Collectors.toList());
+            .toList();
         if (!ikkeVurdertePerioder.isEmpty()) {
             throw new IllegalStateException(
                 "Vilkåret " + vilkår.getVilkårType() + " har en eller flere perioder som ikke er vurdert: " + ikkeVurdertePerioder);
@@ -115,6 +116,10 @@ public abstract class ForeslåBehandlingsresultatStegFelles implements ForeslåB
             var behandlingId = kontekst.getBehandlingId();
             Behandling behandling = behandlingRepository.hentBehandling(behandlingId);
             behandling.setBehandlingResultatType(BehandlingResultatType.IKKE_FASTSATT);
+
+            var beslutterFatteVedtak = behandling.getÅpentAksjonspunktMedDefinisjonOptional(AksjonspunktDefinisjon.FATTER_VEDTAK);
+            beslutterFatteVedtak.ifPresent(Aksjonspunkt::avbryt);
+
             behandlingRepository.lagre(behandling, kontekst.getSkriveLås());
         }
     }
