@@ -1,24 +1,20 @@
 package no.nav.k9.sak.web.app.tjenester.abakus;
 
-import java.time.LocalDateTime;
 import java.util.Objects;
-import java.util.Optional;
+import java.util.Properties;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
-import jakarta.enterprise.context.Dependent;
-import jakarta.inject.Inject;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import jakarta.enterprise.context.Dependent;
+import jakarta.inject.Inject;
+import no.nav.k9.prosesstask.api.ProsessTaskData;
+import no.nav.k9.prosesstask.api.ProsessTaskStatus;
+import no.nav.k9.prosesstask.api.ProsessTaskTjeneste;
 import no.nav.k9.sak.domene.arbeidsforhold.InntektArbeidYtelseTjeneste;
 import no.nav.k9.sak.domene.arbeidsforhold.RegisterdataCallback;
 import no.nav.k9.sak.domene.registerinnhenting.task.InnhentIAYIAbakusTask;
-import no.nav.k9.prosesstask.api.ProsessTaskData;
-import no.nav.k9.prosesstask.api.ProsessTaskHendelseMottak;
-import no.nav.k9.prosesstask.api.ProsessTaskRepository;
-import no.nav.k9.prosesstask.api.ProsessTaskStatus;
 
 @SuppressWarnings("unused")
 @Dependent
@@ -27,8 +23,7 @@ public class IAYRegisterdataTjeneste {
     private static final Logger log = LoggerFactory.getLogger(IAYRegisterdataTjeneste.class);
 
     private InntektArbeidYtelseTjeneste iayTjeneste;
-    private ProsessTaskRepository prosessTaskRepository;
-    private ProsessTaskHendelseMottak hendelseMottak;
+    private ProsessTaskTjeneste taskTjeneste;
 
     public IAYRegisterdataTjeneste() {
     }
@@ -37,24 +32,19 @@ public class IAYRegisterdataTjeneste {
      * Standard ctor som injectes av CDI.
      */
     @Inject
-    public IAYRegisterdataTjeneste(InntektArbeidYtelseTjeneste iayTjeneste, ProsessTaskRepository prosessTaskRepository,
-                                   ProsessTaskHendelseMottak hendelseMottak) {
+    public IAYRegisterdataTjeneste(InntektArbeidYtelseTjeneste iayTjeneste, ProsessTaskTjeneste taskTjeneste) {
         this.iayTjeneste = Objects.requireNonNull(iayTjeneste, "iayTjeneste");
-        this.prosessTaskRepository = prosessTaskRepository;
-        this.hendelseMottak = hendelseMottak;
+        this.taskTjeneste = taskTjeneste;
     }
 
     public void håndterCallback(RegisterdataCallback callback) {
         log.info("Mottatt callback fra Abakus etter registerinnhenting for behandlingId={}, eksisterendeGrunnlag={}, nyttGrunnlag={}",
             callback.getBehandlingId(), callback.getEksisterendeGrunnlagRef(), callback.getOppdatertGrunnlagRef());
-        final var ikkeFerdigeAbakusTasks = prosessTaskRepository.finnUferdigeBatchTasks(InnhentIAYIAbakusTask.TASKTYPE)
+        final var tasksSomVenterPåSvar = taskTjeneste.finnAlle(ProsessTaskStatus.VENTER_SVAR)
             .stream()
+            .filter(it -> Objects.equals(InnhentIAYIAbakusTask.TASKTYPE, it.getTaskType()))
             .filter(it -> it.getBehandlingId().equals("" + callback.getBehandlingId()))
-            .collect(Collectors.toList());
-
-        final var tasksSomVenterPåSvar = ikkeFerdigeAbakusTasks.stream()
-            .filter(it -> ProsessTaskStatus.VENTER_SVAR.equals(it.getStatus()))
-            .collect(Collectors.toList());
+            .toList();
 
         if (tasksSomVenterPåSvar.size() == 1) {
             mottaHendelse(tasksSomVenterPåSvar.get(0), callback.getOppdatertGrunnlagRef());
@@ -66,18 +56,9 @@ public class IAYRegisterdataTjeneste {
     }
 
     private void mottaHendelse(ProsessTaskData task, UUID oppdatertGrunnlagRef) {
-        Objects.requireNonNull(task, "Task");
-        Optional<String> venterHendelse = Optional.ofNullable(task.getPropertyValue(ProsessTaskData.HENDELSE_PROPERTY));
-        if (!Objects.equals(ProsessTaskStatus.VENTER_SVAR, task.getStatus()) || venterHendelse.isEmpty()) {
-            throw new IllegalStateException("Uventet hendelse " + InnhentIAYIAbakusTask.IAY_REGISTERDATA_CALLBACK + " mottatt i tilstand " + task.getStatus());
-        }
-        if (!Objects.equals(venterHendelse.get(), InnhentIAYIAbakusTask.IAY_REGISTERDATA_CALLBACK)) {
-            throw new IllegalStateException("Uventet hendelse " + InnhentIAYIAbakusTask.IAY_REGISTERDATA_CALLBACK + " mottatt, venter hendelse " + venterHendelse.get());
-        }
-        task.setStatus(ProsessTaskStatus.KLAR);
-        task.setNesteKjøringEtter(LocalDateTime.now());
-        task.setProperty(InnhentIAYIAbakusTask.OPPDATERT_GRUNNLAG_KEY, oppdatertGrunnlagRef.toString());
+        var props = new Properties();
+        props.setProperty(InnhentIAYIAbakusTask.OPPDATERT_GRUNNLAG_KEY, oppdatertGrunnlagRef.toString());
+        taskTjeneste.mottaHendelse(task, InnhentIAYIAbakusTask.IAY_REGISTERDATA_CALLBACK, props);
         log.info("Behandler hendelse {} i task {}, behandling id {}", InnhentIAYIAbakusTask.IAY_REGISTERDATA_CALLBACK, task.getId(), task.getBehandlingId()); //$NON-NLS-1$
-        prosessTaskRepository.lagre(task);
     }
 }
